start auth
